fix: enables only overflow-y on small screen
to avoid horizontal scrollbar on Windows' browsers, especially inside intent modals

--- a/stylus/elements/defaults.styl
+++ b/stylus/elements/defaults.styl
@@ -43,7 +43,7 @@ body
     overflow-y  auto
 
     +medium-screen()
-        overflow visible
+        overflow-y visible
 
 // COLORS
 html,
